# teleport

./: .gitignore  CMakeCfg.txt  CMakeLists.txt  README.md  build.bat.in  build.sh  build.sh.in  config.ini.in  config.json.in  make.sh  make.sh.in  start_web.sh  version.in
server/: CMakeLists.txt  idea.md
server/hot-fix/20210813-3.5.6-rc6/: make-release.sh
server/hot-fix/20210813-3.5.6-rc6/test/: teleport
server/hot-fix/20210813-3.5.6-rc6/test/controller/: auth.py
server/hot-fix/20210813-3.5.6-rc6/test/model/: user.py
server/hot-fix/20220816-3.2.2/: make-release.sh
server/hot-fix/20220816-3.2.2/base/: README.txt  tp-hotfix.sh
server/hot-fix/20220816-3.5.6-rc6/: make-release.sh
server/hot-fix/20220816-3.5.6-rc6/base/: README.txt
server/hot-fix/20220816-3.6.3-b2/: make-release.sh
server/hot-fix/20220816-3.6.3-b2/base/: README.txt  tp-hotfix.sh
server/share/assist/: README.txt
server/share/data/: main.sql
server/share/etc/: core.ini.in  rdp-ca.pem  rdp-server-cert.pem  rdp-server-key.pem  tp_rdp_ca.crt  tp_rdp_server.crt  tp_rdp_server.key  tp_ssh_server.key  web.conf  web.ini.in
server/tp_core/common/: base_env.cpp  base_env.h  base_record.cpp  base_record.h  protocol_interface.h  ts_const.h  ts_membuf.cpp  ts_membuf.h  ts_memstream.cpp  ts_memstream.h
server/tp_core/core/: CMakeLists.txt  main.cpp  resource.h  tp_core.rc  tp_core.vs2015.sln  tp_core.vs2015.vcxproj  tp_core.vs2015.vcxproj.filters  tp_core.vs2015.vcxproj.vcxproj  tp_core.vs2017.sln  tp_core.vs2017.vcxproj  tp_core.vs2017.vcxproj.filters  tp_tpp_mgr.cpp  tp_tpp_mgr.h  ts_crypto.cpp  ts_crypto.h  ts_db.cpp  ts_db.h  ts_env.cpp  ts_env.h  ts_http_client.cpp  ts_http_client.h  ts_http_rpc.cpp  ts_http_rpc.h  ts_main.cpp  ts_main.h  ts_session.cpp  ts_session.h  ts_ver.h  ts_web_rpc.cpp  ts_web_rpc.h
server/tp_core/protocol/ssh/: CMakeLists.txt  dllmain.cpp  ssh_channel_pair.cpp  ssh_channel_pair.h  ssh_proxy.cpp  ssh_proxy.h  ssh_recorder.cpp  ssh_recorder.h  ssh_session.cpp  ssh_session.h  stdafx.cpp  tpp_env.cpp  tpp_env.h  tpssh.cpp  tpssh.sln  tpssh.vcxproj  tpssh.vcxproj.filters  tpssh.vs2015.sln  tpssh.vs2015.vcxproj  tpssh.vs2015.vcxproj.filters  tpssh.vs2017.sln  tpssh.vs2017.vcxproj  tpssh.vs2017.vcxproj.filters  tpssh_channel.cpp  tpssh_channel.h  tpssh_cli.cpp  tpssh_cli.h  tpssh_proxy.cpp  tpssh_proxy.h  tpssh_rec.cpp  tpssh_session.cpp  tpssh_session.h  tpssh_srv.cpp  tpssh_srv.h
server/tp_core/protocol/telnet/: CMakeLists.txt  dllmain.cpp  stdafx.cpp  targetver.h  telnet_conn.cpp  telnet_conn.h  telnet_proxy.cpp  telnet_proxy.h  telnet_recorder.cpp  telnet_recorder.h  telnet_session.cpp  telnet_session.h  tpp_env.cpp  tpp_env.h  tptelnet.cpp  tptelnet.vs2015.sln  tptelnet.vs2015.vcxproj  tptelnet.vs2015.vcxproj.filters  tptelnet.vs2017.sln  tptelnet.vs2017.vcxproj  tptelnet.vs2017.vcxproj.filters
server/tp_core/testssh/: CMakeLists.txt  readme.md  stdafx.cpp  testssh.cpp  testssh.sln  testssh.vcxproj  testssh.vcxproj.filters
server/tp_web/src/: CMakeLists.txt  main.cpp  resource.h  tp_web.rc  tp_web.vs2015.sln  tp_web.vs2015.vcxproj  tp_web.vs2015.vcxproj.filters  tp_web.vs2017.sln  tp_web.vs2017.vcxproj  tp_web.vs2017.vcxproj.filters  ts_env.cpp  ts_env.h  ts_ver.h
server/www/: requirements.txt
server/www/teleport/: app_bootstrap.py
server/www/teleport/app/: eom_env.py  eom_main.py  eom_upgrade.py  eom_ver.py
server/www/teleport/static/css/: auth.css  dashboard.css  dashboard.css.map  doc.css  error.css  error.css.map  login.css  login.css.map  main.css  maintenance.css  maintenance.css.map  single.css  single.css.map  style.css  style.css.map  sub.css
server/www/teleport/static/download/: example.csv  teleport-example-asset.csv  teleport-example-user.csv
server/www/teleport/static/js/: _sidebar_nav_menu.js  teleport.js  tp-assist.js  tp-const.js  tp-utils.js  ywl.js  ywl_assist.js  ywl_common.js  ywl_const.js  ywl_log_analysis.js
server/www/teleport/static/less/: _base.less  _color.less  _gritter.less  _mimetype.less  _overwrite_bootstrap.less  _overwrite_gritter.less  _remote_action.less  _role.less  _table.less  auth.less  dashboard.less  doc.less  error.less  login.less  main.less  maintenance.less  single.less  style.less  sub.less
server/www/teleport/tools/: restart.bat
server/www/teleport/view/: _footer.html  _footer.mako  _sidebar_nav_menu.html  _sidebar_nav_menu.mako  page_base.html  page_base.mako  page_login_base.html  page_login_base.mako  page_maintenance_base.mako  page_no_sidebar_base.mako  page_single_base.html  page_single_base.mako  test.mako
server/www/teleport/view/asset/: account-group-info.html  account-group-info.mako  account-group-list.html  account-group-list.mako  host-group-info.html  host-group-info.mako  host-group-list.html  host-group-list.mako  host-list.html  host-list.mako
server/www/teleport/view/assist/: config.html  config.mako
server/www/teleport/view/audit/: auz-info.html  auz-info.mako  auz-list.html  auz-list.mako  record-sftp-cmd.html  record-sftp-cmd.mako  record-ssh-cmd.html  record-ssh-cmd.mako  record.html  record.mako  replay-rdp.html  replay-rdp.mako  replay-ssh.html  replay-ssh.mako  replay-telnet.html  replay-telnet.mako  replay.mako
server/www/teleport/view/auth/: login.html  login.mako  page_base.mako  register.mako  sucessful.mako
server/www/teleport/view/cert/: index.mako
server/www/teleport/view/common/: _sidebar_nav_menu.mako
server/www/teleport/view/config/: index.mako
server/www/teleport/view/dashboard/: index.html  index.mako
server/www/teleport/view/error/: error.html  error.mako
server/www/teleport/view/group/: index.mako
server/www/teleport/view/host/: admin_index.mako  common_index.mako  user_index.mako
server/www/teleport/view/log/: index.mako  record-sftp-cmd.mako  record-ssh-cmd.mako  record.mako
server/www/teleport/view/maintenance/: index.html  index.mako  install.html  install.mako  upgrade.html  upgrade.mako
server/www/teleport/view/ops/: auz-info.html  auz-info.mako  auz-list.html  auz-list.mako  remote-list.html  remote-list.mako  sessions.html  (+1 more)
(+380 files in other folders)
